<resources>
    <string name="app_name">FragmentDemo</string>
    <string name="person_name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="terms_conditions">Accept terms and conditions</string>
    <string name="gender">Gender:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="submit_button">Submit</string>

    <string name="title_hi">Hi</string>
    <string name="title_bye">Bye</string>
</resources>
