<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.admin1.intentassignment.MainActivity">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@id/fragment"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/person_name"
            android:ems="10"
            android:id="@+id/name_edittext"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:id="@+id/email_edittext"
            android:layout_below="@+id/name_edittext"
            android:layout_alignLeft="@+id/name_edittext"
            android:layout_alignStart="@+id/name_edittext" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/phone"
            android:id="@+id/phone_edittext"
            android:layout_below="@+id/email_edittext"
            android:layout_alignLeft="@+id/email_edittext"
            android:layout_alignStart="@+id/email_edittext" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/password_first"
            android:layout_below="@+id/phone_edittext"
            android:layout_alignLeft="@+id/phone_edittext"
            android:layout_alignStart="@+id/phone_edittext" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/password_second"
            android:layout_below="@+id/password_first"
            android:layout_alignLeft="@+id/password_first"
            android:layout_alignStart="@+id/password_first" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:id="@+id/gender_edittext"
            android:layout_below="@+id/password_second"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/gender_edittext"
            android:layout_below="@+id/password_second"
            android:layout_toRightOf="@id/gender_edittext"
            android:layout_centerHorizontal="true"
            android:id="@+id/radioGroup"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male"
                android:id="@+id/gender_male" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female"
                android:id="@+id/gender_female" />
        </RadioGroup>

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/radioGroup"
            android:layout_centerHorizontal="true">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions"
                android:id="@+id/terms_conditions" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_button"
                android:id="@+id/submit_button"
                android:onClick="callNextActivity"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>